Bigger ticket button!

--- a/views/about.html
+++ b/views/about.html
@@ -7,7 +7,7 @@
                 <h1 class="col-md-12">{{cover.title}}</h1>
                 <p class="col-md-12">{{cover.subtitle}}</p>
                 <p class="col-md-12" ng-hide="cover.button.disabled">
-                    <a class="btn btn-primary btn-large" ng-href="{{cover.button.url}}" target="_blank">{{cover.button.text}}</a>
+                    <a class="btn btn-danger btn-lg" ng-href="{{cover.button.url}}" target="_blank">{{cover.button.text}}</a>
                 </p>
             </div>
         </div>
