Add support for newlines in speaker/talk descriptions

--- a/views/speaker.html
+++ b/views/speaker.html
@@ -7,7 +7,7 @@
         <div id="speaker_info" class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
             <div ng-show="speaker.description">
                 <h3>About</h3>
-                <p>{{speaker.description}}</p>
+                <p class="with-newlines">{{speaker.description}}</p>
             </div>
             <div ng-show="speaker.sessions">
                 <h3>Sessions
