--- a/views/session.html
+++ b/views/session.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div ng-show="session.desc" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h3>Description</h3>
-            <p>{{session.desc}}</p>
+            <p class="with-newlines">{{session.desc}}</p>
         </div>
     </div>
     <div class="row">
