--- a/views/about.html
+++ b/views/about.html
@@ -24,9 +24,9 @@
                     <h3>Tickets</h3>
                 </div>
                 <div class="panel-body">
-                    <p>Tickets are still on sale for a small fee.</p> 
+                    <p>This event is history, so tickets are no longer available.</p> 
                     <p>We just want make sure you will show up. With 2.5 days of content, food and drinks throughout the whole day and a lot of suprises you can be sure you get your money's worth.</p>
-                    <a class="btn btn-primary" ng-href="{{cover.button.url}}" target="_blank">
+                    <a class="btn btn-primary" ng-hide="{{cover.button.disabled}} ng-href="{{cover.button.url}}" target="_blank">
                         <span class="glyphicon glyphicon-qrcode" aria-hidden="true"> </span> 
                         {{cover.button.text}}
                     </a>
