Fix hiding of 2nd ticket button

--- a/views/about.html
+++ b/views/about.html
@@ -26,7 +26,7 @@
                 <div class="panel-body">
                     <p>This event is history, so tickets are no longer available.</p> 
                     <p>We just want make sure you will show up. With 2.5 days of content, food and drinks throughout the whole day and a lot of suprises you can be sure you get your money's worth.</p>
-                    <a class="btn btn-primary" ng-hide="{{cover.button.disabled}} ng-href="{{cover.button.url}}" target="_blank">
+                    <a class="btn btn-primary" ng-hide="cover.button.disabled" ng-href="{{cover.button.url}}" target="_blank">
                         <span class="glyphicon glyphicon-qrcode" aria-hidden="true"> </span> 
                         {{cover.button.text}}
                     </a>
